@@ -1,3 +1,8 @@
+2009-02-13  Jonh Wendell <jwendell@gnome.org>
+
+	* src/vinagre-tab.c (vinagre_tab_take_screenshot): Presents an error
+	message if capture of screenshot fails.
+
 2009-02-02  Jonh Wendell <jwendell@gnome.org>
 
 	* configure.ac: post-release bump to 2.25.91
